welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:19: error: only classes can have declared but undefined members
val Mur: Boolean
    ^