welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {

def faireC(c:Color){
	setCouleurBrosse(c);
	gauche();
	avance();
	baisseBrosse();
	leveBrosse();
	recule();
	droite();
	avance();
	baisseBrosse();
	leveBrosse();
	avance();
	avance();
	gauche();
}
val Mur: Boolean
def cercle(Mur: Boolean){
	faireC(Color.red)
	faireC(Color.blue)
	faireC(Color.green)
	faireC(Color.yellow)
	for(x<-1 to 3){avance();}
	
}

}


